updates for getting index key fields

--- a/reading_pokitdok_data.ipynb
+++ b/reading_pokitdok_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -143,7 +143,7 @@
        " 'taxonomy_codes': ['207X00000X']}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -164,10 +164,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['is_sole_proprietor', 'licenses', 'provenance', 'taxonomy_codes', 'specialty', 'last_name', 'full_name', 'entity_type', 'other_provider_identifiers', 'gender', 'fax', 'first_name', 'locations', 'enumeration_date', 'middle_name', 'npi', 'last_update_date', 'degree', 'phone', 'specialty_primary'])"
+       "dict_keys(['npi', 'fax', 'entity_type', 'middle_name', 'phone', 'last_update_date', 'full_name', 'specialty_primary', 'taxonomy_codes', 'other_provider_identifiers', 'gender', 'last_name', 'licenses', 'locations', 'is_sole_proprietor', 'specialty', 'enumeration_date', 'degree', 'provenance', 'first_name'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "npi_reactivation_date\n",
+      "NO\n",
+      "fax\n",
+      "<class 'str'>\n",
+      "middle_name\n",
+      "<class 'str'>\n",
+      "last_update_date\n",
+      "<class 'str'>\n",
+      "filter\n",
+      "NO\n",
+      "phone\n",
+      "<class 'str'>\n",
+      "taxonomy_codes\n",
+      "<class 'list'>\n",
+      "suffix\n",
+      "NO\n",
+      "gender\n",
+      "<class 'str'>\n",
+      "specialty_primary\n",
+      "<class 'list'>\n",
+      "degree\n",
+      "<class 'str'>\n",
+      "organization_name\n",
+      "NO\n",
+      "npi\n",
+      "<class 'str'>\n",
+      "other_organization_name\n",
+      "NO\n",
+      "other_prefix\n",
+      "NO\n",
+      "specialty\n",
+      "<class 'list'>\n",
+      "enumeration_date\n",
+      "<class 'str'>\n",
+      "full_name\n",
+      "<class 'str'>\n",
+      "provenance\n",
+      "<class 'list'>\n",
+      "entity_type\n",
+      "<class 'str'>\n",
+      "other_organization_name_type\n",
+      "NO\n",
+      "npi_deactivation_date\n",
+      "NO\n",
+      "other_first_name\n",
+      "NO\n",
+      "contact\n",
+      "NO\n",
+      "other_provider_identifiers\n",
+      "<class 'list'>\n",
+      "other_last_name_type\n",
+      "NO\n",
+      "other_middle_name\n",
+      "NO\n",
+      "prefix\n",
+      "NO\n",
+      "other_last_name\n",
+      "NO\n",
+      "last_name\n",
+      "<class 'str'>\n",
+      "licenses\n",
+      "<class 'list'>\n",
+      "locations\n",
+      "<class 'list'>\n",
+      "is_sole_proprietor\n",
+      "<class 'str'>\n",
+      "parent_organization_name\n",
+      "NO\n",
+      "is_organization_subpart\n",
+      "NO\n",
+      "first_name\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in all_keys:\n",
+    "    print(i)\n",
+    "    try:\n",
+    "        print(type(the_data[0][i]))\n",
+    "    except KeyError:\n",
+    "        print(\"NO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -191,7 +286,7 @@
        "20"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -215,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -263,7 +358,7 @@
        " 'taxonomy_codes'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,6 +367,107 @@
     "len(all_keys)\n",
     "all_keys"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "npi_reactivation_date\n",
+      "<class 'str'>\n",
+      "fax\n",
+      "<class 'str'>\n",
+      "middle_name\n",
+      "<class 'str'>\n",
+      "last_update_date\n",
+      "<class 'str'>\n",
+      "filter\n",
+      "<class 'str'>\n",
+      "phone\n",
+      "<class 'str'>\n",
+      "taxonomy_codes\n",
+      "<class 'str'>\n",
+      "suffix\n",
+      "<class 'str'>\n",
+      "gender\n",
+      "<class 'str'>\n",
+      "specialty_primary\n",
+      "<class 'str'>\n",
+      "degree\n",
+      "<class 'str'>\n",
+      "organization_name\n",
+      "<class 'str'>\n",
+      "npi\n",
+      "<class 'str'>\n",
+      "other_organization_name\n",
+      "<class 'str'>\n",
+      "other_prefix\n",
+      "<class 'str'>\n",
+      "specialty\n",
+      "<class 'str'>\n",
+      "enumeration_date\n",
+      "<class 'str'>\n",
+      "full_name\n",
+      "<class 'str'>\n",
+      "provenance\n",
+      "<class 'str'>\n",
+      "entity_type\n",
+      "<class 'str'>\n",
+      "other_organization_name_type\n",
+      "<class 'str'>\n",
+      "npi_deactivation_date\n",
+      "<class 'str'>\n",
+      "other_first_name\n",
+      "<class 'str'>\n",
+      "contact\n",
+      "<class 'str'>\n",
+      "other_provider_identifiers\n",
+      "<class 'str'>\n",
+      "other_last_name_type\n",
+      "<class 'str'>\n",
+      "other_middle_name\n",
+      "<class 'str'>\n",
+      "prefix\n",
+      "<class 'str'>\n",
+      "other_last_name\n",
+      "<class 'str'>\n",
+      "last_name\n",
+      "<class 'str'>\n",
+      "licenses\n",
+      "<class 'str'>\n",
+      "locations\n",
+      "<class 'str'>\n",
+      "is_sole_proprietor\n",
+      "<class 'str'>\n",
+      "parent_organization_name\n",
+      "<class 'str'>\n",
+      "is_organization_subpart\n",
+      "<class 'str'>\n",
+      "first_name\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in all_keys:\n",
+    "    print(i)\n",
+    "    print(type(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1719,7 +1915,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### TODO: check whether duplicates are overwriting school names with 'Other' or nulls or not"
    ]
@@ -2888,7 +3087,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2972,14 +3173,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Adding med school to datafile"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### TODO: run on whole datafile and not just 1000 item subset"
    ]
@@ -2988,7 +3195,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3000,7 +3209,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3060,14 +3271,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Now doing the same for the year of graduation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Step 1: make dictionary of npi's and grad years"
    ]
@@ -3076,7 +3293,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3113,7 +3332,9 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3132,7 +3353,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3149,7 +3372,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### why not matching up?"
    ]
@@ -3158,7 +3384,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -4178,7 +4406,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Adding grad years to datafile by searching dictionary on NPI"
    ]
@@ -4187,7 +4418,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
