cleaned up files

--- a/reading_pokitdok_data.ipynb
+++ b/reading_pokitdok_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"/Users/SWiegreffe/Desktop/pokitdok_project/sample.jsonl\", 'r') as f:\n",
+    "with open(\"/mnt/mypartition/pokitdok_project/npidata_20170108.jsonl\", 'r') as f:\n",
     "    the_data = [json.loads(l) for l in f]"
    ]
   },
@@ -459,15 +459,6 @@
     "    print(i)\n",
     "    print(type(i))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -4427,6 +4418,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -4442,7 +4434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
