--- a/merging_medSchools.ipynb
+++ b/merging_medSchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -12,7 +12,9 @@
    "source": [
     "import json\n",
     "import pprint\n",
-    "import csv"
+    "import csv\n",
+    "import pickle\n",
+    "import datetime"
    ]
   },
   {
@@ -25,13 +27,119 @@
    },
    "outputs": [],
    "source": [
+    "#took ~40 minutes\n",
+    "\n",
+    "a = datetime.datetime.now().replace(microsecond=0)\n",
+    "\n",
     "with open(\"/mnt/mypartition/pokitdok_project/npidata_20170108.jsonl\", 'r') as f:\n",
-    "    the_data = [json.loads(l) for l in f]"
+    "    the_data = [json.loads(l) for l in f]\n",
+    "    \n",
+    "b = datetime.datetime.now().replace(microsecond=0)\n",
+    "print(b-a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pickle.dump( the_data, open( \"/mnt/mypartition/pokitdok_project/the_data.p\", \"wb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(the_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#the_data = pickle.load( open( \"/mnt/mypartition/pokitdok_project/the_data.p\", \"rb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'degree': 'MD',\n",
+       " 'entity_type': 'individual',\n",
+       " 'enumeration_date': '2005-05-23T00:00:00',\n",
+       " 'fax': '3088652506',\n",
+       " 'first_name': 'DAVID',\n",
+       " 'full_name': 'DAVID A WIEBE',\n",
+       " 'gender': 'Male',\n",
+       " 'is_sole_proprietor': 'X',\n",
+       " 'last_name': 'WIEBE',\n",
+       " 'last_update_date': '2007-07-08T00:00:00',\n",
+       " 'licenses': [{'number': '12637', 'state': 'NE'}],\n",
+       " 'locations': [{'address_lines': ['Po Box 2168'],\n",
+       "   'city': 'Kearney',\n",
+       "   'country': 'US',\n",
+       "   'fax': '3088652506',\n",
+       "   'md5hash': '2f47fded67f1900b98146794d70fec25',\n",
+       "   'phone': '3088652512',\n",
+       "   'role': ['mailing'],\n",
+       "   'state': 'NE',\n",
+       "   'zipcode': '688482168'},\n",
+       "  {'address_lines': ['3500 Central Ave'],\n",
+       "   'city': 'Kearney',\n",
+       "   'country': 'US',\n",
+       "   'fax': '3088652506',\n",
+       "   'md5hash': 'f0384445e5a4ba49dfaa7acdd97c0632',\n",
+       "   'phone': '3088652512',\n",
+       "   'role': ['practice'],\n",
+       "   'state': 'NE',\n",
+       "   'zipcode': '688472944'}],\n",
+       " 'middle_name': 'A',\n",
+       " 'npi': '1679576722',\n",
+       " 'other_provider_identifiers': [{'id': '93420WI',\n",
+       "   'state': 'NE',\n",
+       "   'type': 'MEDICARE ID-TYPE UNSPECIFIED'},\n",
+       "  {'id': '1553', 'issuer': 'BCBS', 'state': 'NE', 'type': 'OTHER'},\n",
+       "  {'id': '645540', 'issuer': 'FIRSTGUARD', 'state': 'KS', 'type': 'OTHER'},\n",
+       "  {'id': '46969', 'issuer': 'BCBS', 'state': 'KS', 'type': 'OTHER'},\n",
+       "  {'id': 'B67599', 'type': 'MEDICARE UPIN'},\n",
+       "  {'id': '046969WI', 'state': 'KS', 'type': 'MEDICARE ID-TYPE UNSPECIFIED'}],\n",
+       " 'phone': '3088652512',\n",
+       " 'provenance': [{'date': '2017-01-08', 'mapping_module': 'nppes_npi'}],\n",
+       " 'specialty': [{'classification': 'Orthopaedic Surgery',\n",
+       "   'code': '207X00000X'}],\n",
+       " 'specialty_primary': ['Orthopaedic Surgery'],\n",
+       " 'taxonomy_codes': ['207X00000X']}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -53,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
