updated to pickle objects

--- a/merging_medSchools.ipynb
+++ b/merging_medSchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -46,7 +46,13 @@
    },
    "outputs": [],
    "source": [
-    "pickle.dump( the_data, open( \"/mnt/mypartition/pokitdok_project/the_data.p\", \"wb\" ) )"
+    "\n",
+    "a = datetime.datetime.now().replace(microsecond=0)\n",
+    "\n",
+    "pickle.dump( the_data, open( \"/mnt/mypartition/pokitdok_project/the_data.p\", \"wb\" ) )\n",
+    "\n",
+    "b = datetime.datetime.now().replace(microsecond=0)\n",
+    "print(b-a)"
    ]
   },
   {
@@ -58,17 +64,6 @@
    "outputs": [],
    "source": [
     "len(the_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#the_data = pickle.load( open( \"/mnt/mypartition/pokitdok_project/the_data.p\", \"rb\" ) )"
    ]
   },
   {
@@ -579,6 +574,42 @@
     "#checking that worked\n",
     "the_data[8]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
