cleaned up final ranking code

--- a/final_ranking_algorithm.ipynb
+++ b/final_ranking_algorithm.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "a = datetime.datetime.now().replace(microsecond=0)\n",
     "\n",
-    "with open(\"/Users/SWiegreffe/Desktop/pokitdok_project/subsetFLGA.jsonl\", 'r') as f:\n",
+    "with open(\"/Users/SWiegreffe/Desktop/pokitdok_project/UPDATED.jsonl\", 'r') as f:\n",
     "    the_data = [json.loads(l) for l in f]\n",
     "    \n",
     "b = datetime.datetime.now().replace(microsecond=0)\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -58,10 +58,10 @@
     {
      "data": {
       "text/plain": [
-       "1000"
+       "5021"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8545,7 +8545,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -9060,7 +9062,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -9085,7 +9089,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
