--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2317,9 +2317,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3:15:35\n"
+     ]
+    }
+   ],
    "source": [
     "#RUN\n",
     "a = datetime.datetime.now().replace(microsecond=0)\n",
